--- a/style/index.css
+++ b/style/index.css
@@ -25,14 +25,17 @@ body {
     justify-content: center;
     color: white;
     padding: 50px;
+    margin-bottom: 30px;
 }
 
 .form-section label {
     font-family: 'Roboto', sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 18px;
     color: white;
     letter-spacing: 2px;
+    display: flex;
+    margin-top: 20px;
 }
 
 .form-section button {
@@ -43,9 +46,11 @@ body {
     border-radius: 40px;
     border: none;
     font-family: 'Roboto', sans-serif;
-    font-weight: 400;
+    font-weight: 500;
     font-size: 18px;
     letter-spacing: 2px;
+    margin-top: 30px;
+    margin-left: 50px;
 }
 
 input, textarea {
@@ -54,12 +59,36 @@ input, textarea {
     border: none;
     border-bottom: 1px solid #9DBEBB;
     font-family: 'Roboto', sans-serif;
-    font-weight: normal;
+    font-weight: 300;
     font-size: 18px;
     color: white;
+    margin: 15px 0;
+    letter-spacing: 5px;
+    padding-left: 10px;
 }
 
 input::placeholder, 
 textarea::placeholder {
     color: white !important;
+}
+
+.image-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.orange-bg {
+   height: 594px;
+   width: 345px;
+   position: absolute;
+   right: 0;
+   background-color: #FFB039;
+}
+
+#rubber-duck-image {
+    position: relative;
+    z-index: 1;
+    margin-top: 60px;
 }
